Actualizacion enlace youtebe

--- a/html/mis_proyectos.html
+++ b/html/mis_proyectos.html
@@ -135,6 +135,31 @@
 
             </aside>
         </div>
+        <div class="row">
+            <main class="sobre-mi col-md-9">
+                <article class="articulo" id="Proyecto-4">
+                    <h2 class="titulo_2">Enlace a Youtube</h2>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/62u9wrE9mbs" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>
+                    
+                </article>
+                <div>
+                    <p>
+                        Muestra de conexión a un enlace de multimedia desde una pagina web
+                    </p>
+                </div>
+            </main>
+                
+            <aside class="as-left col-md-3">
+                <h4>Ambientes principales</h4>
+                <ul>
+                    <li><strong>Enlace a Video de Youtube</strong></li>
+                </ul>
+
+            </aside>
+        </div>
     </div>
 
     <iframe src="./footer.html" class="if-footer" frameborder="0"></iframe>
